# edge-device-webrtc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh  development.md  embedded_build.sh  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: build_and_test.yml  build_edge_device_webrtc.yml  demo_container.yml  test_cross_build.yml
build-scripts/: Dockerfile  docker-compose.yml  gstreamer.supp
building/: README.md
building/examples/static/: Dockerfile  README.md
cross_build/: Dockerfile  Dockerfile.aarch64  Dockerfile.ingenic-mips  Dockerfile.ingenic-t40-mips  Dockerfile.sigmastar
cross_build/aarch64/: Dockerfile
cross_build/ingenic-t40/: Dockerfile  README.md  apply_patches.sh  mips-gcc720-glibc226-std-round-compile-error.patch  nabto-embedded-sdk-libm.patch  run.sh
demo-scripts/: entrypoint.sh
example/: CMakeLists.txt  iam_util.cpp  main.cpp  nabto_device.cpp
examples/simple-webrtc/: CMakeLists.txt  README.md  coap_listener.cpp  coap_listener.hpp  main.cpp
examples/simple-webrtc-race-condition/: README.md  main.cpp
examples/simple-webrtc-race-condition/web-client/: package.json
examples/simple-webrtc-send-audio-from-browser/: README.md  main.cpp
examples/simple-webrtc-send-audio-from-browser/web-client/: index.html  package-lock.json  package.json  webrtc_client.js
examples/simple-webrtc-two-streams/: CMakeLists.txt  README.md  coap_listener.hpp  main.cpp
examples/simple-webrtc-two-streams/web-client/: index.html  package.json  webrtc_client.js
examples/simple-webrtc/web-client/: edge_webrtc_bundle.js  index.html  nabto_module.js  package-lock.json  package.json  styles.css  util.js  webrtc_client.js
examples/webrtc-demo/: CMakeLists.txt  README.md  filesystem_create_directories_test.cpp  iam_util.cpp  main.cpp  nabto_device.cpp  nabto_device.hpp  oauth_validator.hpp
examples/webrtc-demo/web-client/: README.md  index.html  nabtoModule.js  package-lock.json  package.json  styles.css  util.js  webclient.js
examples/webrtc-device/: CMakeLists.txt  main.cpp  rtsp_client.hpp
include/nabto/: nabto_device_webrtc.hpp  nabto_webrtc.hpp
mbedtls-config/: mbedtls_config.h
src/: CMakeLists.txt  llvm_sanitizers.cmake  main.cpp  util.cpp  util.hpp  webrtc.cpp  webrtc.hpp  webrtc_libdatachannel.cpp  webrtc_libdatachannel.hpp  webrtc_stream.hpp
src/api/: nabto_device_webrtc.cpp  nabto_device_webrtc_impl.cpp  nabto_device_webrtc_impl.hpp
src/event-queue/: event_queue.hpp  event_queue_impl.cpp  event_queue_impl.hpp
src/media-streams/: media_stream.hpp  rtcp_client.hpp  rtp_client.cpp  rtp_client.hpp  rtp_stream.cpp  rtp_stream.hpp  rtsp_client.cpp  rtsp_client.hpp  rtsp_stream.cpp  rtsp_stream.hpp
src/modules/codecs/: CMakeLists.txt  h264.cpp  h264.hpp  opus.cpp  opus.hpp  pcmu.cpp  pcmu.hpp  rtp_codec.hpp
src/modules/event-queue/: CMakeLists.txt  event_queue.hpp  event_queue_impl.cpp
src/modules/fifo-file-client/: CMakeLists.txt  fifo_file_client.cpp  fifo_file_client.hpp
src/modules/media-streams/: CMakeLists.txt  media_stream.hpp  rtp_client.cpp  rtp_client.hpp  rtp_stream.cpp  rtp_stream.hpp  rtp_track.hpp  rtsp_client.hpp  rtsp_stream.hpp
src/modules/rtp-client/: CMakeLists.txt  rtp_client.cpp  rtp_client.hpp  rtp_track.hpp
src/modules/rtp-packetizer/: CMakeLists.txt  h264_packetizer.cpp  h264_packetizer.hpp  pcmu_packetizer.cpp  pcmu_packetizer.hpp  rtp_packetizer.hpp
src/modules/rtp-repacketizer/: CMakeLists.txt  h264_repacketizer.hpp  rtp_repacketizer.cpp  rtp_repacketizer.hpp
src/modules/rtsp-client/: CMakeLists.txt  rtcp_client.hpp  rtsp_client.cpp  rtsp_client.hpp  rtsp_stream.cpp  rtsp_stream.hpp  tcp_rtp_client.cpp  tcp_rtp_client.hpp
src/modules/track-negotiators/: CMakeLists.txt  h264.cpp  h264.hpp  h265.cpp  h265.hpp  opus.cpp  opus.hpp  pcmu.cpp  pcmu.hpp  track_negotiator.cpp  track_negotiator.hpp  vp8.cpp  vp8.hpp
src/modules/util/: CMakeLists.txt  cxx_std_round_fix.hpp  util.cpp  util.hpp
src/nabto-device/: iam_config.json  iam_util.cpp  nabto_device.cpp  nabto_device.hpp  oauth_validator.hpp
src/rtp/: media_stream.hpp  rtp_client.cpp  rtp_client.hpp  rtsp_client.cpp  rtsp_client.hpp
src/signaling-stream/: signaling_stream.cpp  signaling_stream.hpp  signaling_stream_manager.cpp  signaling_stream_manager.hpp
src/webrtc-connection/: webrtc_coap_channel.cpp  webrtc_coap_channel.hpp  webrtc_connection.cpp  webrtc_connection.hpp  webrtc_stream_channel.cpp  webrtc_stream_channel.hpp  webrtc_util.hpp
test/: CMakeLists.txt
test-apps/rtsp-server/: CMakeLists.txt  README.md
test-apps/rtsp-server/src/: gst-rtsp-launch.cpp
test-apps/rtsp-tester/: CMakeLists.txt  README.md  main.cpp
test-apps/simple-webrtc-race-condition/: CMakeLists.txt  coap_listener.cpp  main.cpp
test-apps/simple-webrtc-race-condition/web-client/: index.html  package-lock.json  webrtc_client.js
test-apps/simple-webrtc-send-audio-from-browser/: CMakeLists.txt  coap_listener.cpp  main.cpp
test-apps/simple-webrtc-send-audio-from-browser/web-client/: index.html  package-lock.json  (+2 more)
test-apps/simple-webrtc-two-streams/: CMakeLists.txt  coap_listener.hpp  main.cpp
test/distribution/direct_link_gcc/: build.sh  test.cpp
test/distribution/direct_link_webrtc_demo/: README.md  build.sh
test/gstreamer-tests/: gstreamer.cmake  gstreamer_tests.cpp
test/signaling-tests/: signaling_tests.cpp  signaling_tests_v2.cpp  signaling_util.hpp
test/signalling-server/: app.ts  package-lock.json  package.json  signalling_connection.ts  websocket_connection.ts  websocket_listener.ts  websocket_server.ts
test/unit-test/: .mocharc.json  package.json  tsconfig.json
test/unit-test/src/: coap_tests.spec.ts  fixture.ts  globalFixture.ts  webrtc_tests.spec.ts
test/util-tests/: util_tests.cpp
test/web-client/: README.md  chat.css  index.html  nabtoWebrtc.js  nabtoWebrtcConnection.js  nabtoWebrtcSignaling.js  package-lock.json  package.json  spake2.js  spake2Test.js  videoClient.js
test/web-client/techdemo/: index.html  techdemo.css  techdemo.js
(+15 files in other folders)
